Increase Heading Size on Login Page

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -20,24 +20,26 @@
         <h2>Time travel for your playlists.</h2>
       </div>
       <div class="description">
-        Rediscovery for Spotify makes it easy for you to relive past memories by creating playlists with the tracks you added during
-        that time.
+        <p>Rediscovery for Spotify makes it easy for you to relive past memories by creating playlists with the tracks you added
+          during that time.</p>
         <br>
-        <br> Simply select a timeframe and get an instant collection of the songs you added to any of your playlists.
+        <p>Simply select a timeframe and get an instant collection of the songs you added to any of your playlists.</p>
         <br>
-        <br> You could create a playlist with songs from your last vacation, of a special year in your life or anything else
-        you want to get nostalgic about.
+        <p>You could create a playlist with songs from your last vacation, of a special year in your life or anything else you
+          want to get nostalgic about.</p>
       </div>
       <a class="btn btn-green" href="{{url}}">Get started!</a>
     </div>
-    <div class="left" >
+    <div class="left">
 
     </div>
   </div>
   <div class="footer">
     <nav>
       <a href="https://lennart.cc">Lennart Becker © {{currentYear}}</a>
-      <a href="https://github.com/lennartbecker"><img src="/assets/github.png" alt="" class="logo"></a>
+      <a href="https://github.com/lennartbecker">
+        <img src="/assets/github.png" alt="" class="logo">
+      </a>
     </nav>
   </div>
 </div>
