--- a/src/app/main-panel/main-panel.component.html
+++ b/src/app/main-panel/main-panel.component.html
@@ -70,8 +70,8 @@
                   <h3 class="title">{{track.track.name}}</h3>
                   <p class="artist">{{track.track.artists[0].name}}</p>
                 </div>
-                <div class="right">
-                  <a (click)="play(track)" *ngIf="track.track.preview_url">
+                <div class="right" (click)="play(track)" *ngIf="track.track.preview_url">
+                  <a >
                     <i class="fas fa-play" *ngIf="currentlyPlaying != track.track.preview_url; else pauseButton"></i>
                   </a>
                 </div>
